tests/compile-fail/derive_salsa_value_unknown_attribute.rs
#[derive(salsa::SalsaValue)]
#[salsa_value(unknown)]
struct Value;

fn main() {}
