tests/compile-fail/derive_salsa_value_unknown_attribute.stderr
error: unexpected `#[salsa_value]` attribute on type
 --> tests/compile-fail/derive_salsa_value_unknown_attribute.rs:2:3
  |
2 | #[salsa_value(unknown)]
  |   ^^^^^^^^^^^
